--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("#hide").click(function(){
-        $("body:not(div.boo)").hide();
-    });
+        $("body").hide();
     $("#show").click(function(){
         $("body").show();
     });
@@ -18,7 +16,7 @@ Anna Baker
 </HEAD>
 <BODY>
 <header>
-<button id="hide">Hide</button>
+
 
 <section>
 <H1> 
