--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 $(document).ready(function(){
         $("main").hide();
     $("#show").click(function(){
-        $("body").show();
+        $("main").show();
     });
 });
 </script>
