--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-        $("main").hide();
+        $("body").hide();
     $("#show").click(function(){
         $("main").show();
     });
