--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
+        <button id="hide">Hide</button>
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
   <UL>
