--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-        $("body").hide();
+        $("#section").hide();
     $("#show").click(function(){
-        $("main").show();
+        $("section").show();
     });
 });
 </script>
@@ -118,10 +118,10 @@ Anna Katherine Rodenborg Baker, MA
 
 
 </main>
+</section>
 <div class="boo">
     <button id="show">Show</button>
 </div>
-</section>
- 
+
 </BODY>
 </HTML>
