--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-        $("#section").hide();
+        $("section").hide();
     $("#show").click(function(){
         $("section").show();
     });
@@ -16,8 +16,6 @@ Anna Baker
 </HEAD>
 <BODY>
 <header>
-
-
 <section>
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
@@ -31,7 +29,7 @@ Anna Katherine Rodenborg Baker, MA
   </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
-        <button id="hide">Hide</button>
+        
 <P>Experience</P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
   <UL>
@@ -120,6 +118,7 @@ Anna Katherine Rodenborg Baker, MA
 </main>
 </section>
 <div class="boo">
+        <button id="hide">Hide</button>
     <button id="show">Show</button>
 </div>
 
