--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-        $("section").hide();
+    $("test").hide();
     $("#show").click(function(){
         $("section").show();
     });
+    $("#hide").click(function(){
+        $("section").hide();
+    });
+    }):
 });
 </script>
 <TITLE>
@@ -17,6 +21,7 @@ Anna Baker
 <BODY>
 <header>
 <section>
+<div class="test">
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
@@ -112,9 +117,6 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
 </div>
-
-
-
 </main>
 </section>
 <div class="boo">
