--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <script>
 $(document).ready(function(){
     $("body").hide();
-    $("#show").click(function(){
-        $("section").show();
-    });
     $("#hide").click(function(){
-        $("section").hide();
+        $("p").hide();
     });
-    }):
+    $("#show").click(function(){
+        $("p").show();
+    });
 });
 </script>
+
 <TITLE>
 Anna Baker
 </TITLE>
