--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("main").hide();
-    $("#hide").click(function(){
-        $("p").hide();
-    });
+    $('body').wrapInner('<div class="new" />');
+    $('.new').hide();
     $("#show").click(function(){
-        $("p").show();
+        $(".new").show();
+    });
+    $("#hide").click(function(){
+        $(".new").hide();
     });
 });
 </script>
