--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $('body').wrapInner('<div class="new" />');
+    $('test').wrapInner('<div class="new" />');
     $('.new').hide();
     $("#show").click(function(){
         $(".new").show();
