--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $('test').wrapInner('<div class="new" />');
+    $('butones').wrapInner('<div class="new" />');
     $('.new').hide();
     $("#show").click(function(){
         $(".new").show();
@@ -22,7 +22,6 @@ Anna Baker
 <BODY>
 <header>
 <section>
-<div class="test">
 <H1> 
 Anna Katherine Rodenborg Baker, MA  
 </H1>
@@ -117,10 +116,9 @@ Anna Katherine Rodenborg Baker, MA
   <LI>Vice President (2014-present)</LI>
   <LI>Editor of quarterly newsletter, <a href = "http://www.mnrpcv.org/newsletters/newsletters/"> MNRPCV News</a></LI>
 </UL>
-</div>
 </main>
 </section>
-<div class="boo">
+< div class = "butones">
         <button id="hide">Hide</button>
     <button id="show">Show</button>
 </div>
