--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-    $('body:not('butones')').wrapInner('<div class="new" />');
-    $('.new').hide();
+    $('body').wrapInner('<div class="new" />');
+    $('.new:not(.butones)').hide();
+});
     $("#show").click(function(){
         $(".new").show();
     });
