--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $(".hideme").hide();
-    $(".hideme").click(function(){
+    $("hide").click(function(){
        $(".hideme").hide(); 
     })
-    $(".hideme").click(function(){
+    $("show").click(function(){
         $(".hideme").show();
     })
 });
@@ -117,8 +117,8 @@ Anna Katherine Rodenborg Baker, MA
 </section>
 </div>
 
-    <button id=".hideme">Hide</button>
-    <button id=".hideme">Show</button>
+    <button id="hide">Hide</button>
+    <button id="show">Show</button>
 
 
 </BODY>
