--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
     $(".hideme").hide();
-    $("hide").click(function(){
+    $("#hide").click(function(){
        $(".hideme").hide(); 
     })
-    $("show").click(function(){
+    $("#show").click(function(){
         $(".hideme").show();
     })
 });
