--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@ Anna Baker
 <div class = "hideme">
 <header>
 <section>
-<H1> 
-Anna Katherine Rodenborg Baker, MA  
-</H1>
-<H2>annakatherinebaker@gmail.com</H2>
-<H2>763.302.9886</H2>
+<H1> Anna Katherine Rodenborg Baker, MA  </H1>
+<H2> annakatherinebaker@gmail.com </H2>
+<H2> 763.302.9886 </H2>
 </header>
 
 <P> Career Profile: </P>
