--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Anna Baker
 <P> Career Profile: </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
+<div class="dropdown">    
 <P> Experience </P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
   <UL>
@@ -115,6 +116,7 @@ Anna Baker
 </UL>
 </main>
 </section>
+</div>
 </div>
 </BODY>
 </HTML>
