--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@ Anna Baker
 <P> Career Profile: </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
-<div class="dropdown">    
+<div class="dropdown">
+  <span>
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    padding: 12px 16px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 <P> Experience </P>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
   <UL>
@@ -116,6 +129,11 @@ Anna Baker
 </UL>
 </main>
 </section>
+</span>
+  <div class="dropdown-content">
+    <p>Hello World!</p>
+  </div>
+</div>
 </div>
 </div>
 </BODY>
