--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ $(document).ready(function(){
         $(".hideme").show();
     })
 });
-</script>
+</script> <!--STOP--> 
 
 <TITLE>
 Anna Baker
@@ -21,7 +21,7 @@ Anna Baker
 <BODY> 
 <button id="hide">Hide</button>
 <button id="show">Show</button>
-<div class = "hideme">
+<div class = "hideme"> <!--DONT TOUCH ME OR ILL RUN AWAY-->
 <header>
 <section>
 <H1> Anna Katherine Rodenborg Baker, MA  </H1>
@@ -33,28 +33,20 @@ Anna Baker
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
 <div class="dropdown">
-  <span>
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    padding: 12px 16px;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-<P> Experience </P>
+<P> Experience </P> 
+<span>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
-  <UL>
+</span>
+  <div class="dropdown-content">
+      <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
     <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
     <LI>Provided patient services in Spanish 
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
+  </div>
+ </div>
 
 <H4>Interpreter, Multilingual Word 2014</H4>
   <UL>
@@ -130,8 +122,8 @@ Anna Baker
 </main>
 </section>
 </span>
-  <div class="dropdown-content">
-    <p>Hello World!</p>
+  
+    
   </div>
 </div>
 </div>
