--- a/index.html
+++ b/index.html
@@ -40,23 +40,26 @@ Anna Baker
   <div class="dropdown-content">
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
-    <LI>Grew number of patients enrolled in healthcare by 15% in 2015 </LI>
-    <LI>Provided patient services in Spanish 
+    <LI>Grew number of patients enrolled in healthcare by 15%</LI>
+    <LI>Provided patient services in Spanish</LI> 
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
   </div>
  </div>
-
-<H4>Interpreter, Multilingual Word 2014</H4>
-  <UL>
+<div class = "dropdown">
+<span><H4>Interpreter, Multilingual Word 2014</H4></span>
+  <div class="dropdown-content">
+    <UL>
     <LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
     <LI>Assisted in communicating about cultural differences</LI>
     <LI>Coordinated interpreters with client requests</LI>
   </UL>
-
-<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
-  <UL>
+  </div>
+  </div>
+<div class="dropdown">
+<span><H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4></span>
+ <div class="dropdown-content"> <UL>
     <LI>Supported and coordinated Rural Community Development program</LI>
     <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
     <LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
@@ -64,6 +67,7 @@ Anna Baker
     <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
     <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
   </UL>
+  </div>
 
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
   <UL>
