--- a/index.html
+++ b/index.html
@@ -32,12 +32,8 @@ Anna Baker
 <P> Career Profile: </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
-<div class="dropdown">
 <P> Experience </P> 
-<span>
-<h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016</h4>
-</span>
-  <div class="dropdown-content">
+<h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
     <LI>Grew number of patients enrolled in healthcare by 15%</LI>
@@ -45,21 +41,16 @@ Anna Baker
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
-  </div>
- </div>
-<div class = "dropdown">
-<span><H4>Interpreter, Multilingual Word 2014</H4></span>
-  <div class="dropdown-content">
+ <H4>Interpreter, Multilingual Word 2014</H4>
+  
     <UL>
     <LI>Provided interpretive services in Spanish/English in medical, academic and community service contexts</LI>
     <LI>Assisted in communicating about cultural differences</LI>
     <LI>Coordinated interpreters with client requests</LI>
   </UL>
-  </div>
-  </div>
-<div class="dropdown">
-<span><H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4></span>
- <div class="dropdown-content"> <UL>
+ 
+<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
+<UL>
     <LI>Supported and coordinated Rural Community Development program</LI>
     <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
     <LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
@@ -67,7 +58,6 @@ Anna Baker
     <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
     <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
   </UL>
-  </div>
 
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
   <UL>
