--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ $(document).ready(function(){
     })
     $("#show").click(function(){
         $(".hideme").show();
-    })
-});
+    })   // end of hide/reveal trick //
+}); 
 </script> <!--STOP--> 
 
 <TITLE>
@@ -32,7 +32,7 @@ Anna Baker
 <P> Career Profile: </P>
 <P1> Mover and shaker, world traveler, all around badass. </P1>
 <main>
-<div class="grow">    
+    
 <P> Experience </P> 
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
@@ -42,6 +42,7 @@ Anna Baker
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
+  
  <H4>Interpreter, Multilingual Word 2014</H4>
   
     <UL>
