--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Anna Baker
 <main>
     
 <P> Experience </P> 
+<div class = "grow">
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
@@ -42,7 +43,8 @@ Anna Baker
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
-  
+  </div>
+  <div class = "grow">
  <H4>Interpreter, Multilingual Word 2014</H4>
   
     <UL>
@@ -50,7 +52,8 @@ Anna Baker
     <LI>Assisted in communicating about cultural differences</LI>
     <LI>Coordinated interpreters with client requests</LI>
   </UL>
- 
+ </div>
+ <div class = "grow">
 <H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
 <UL>
     <LI>Supported and coordinated Rural Community Development program</LI>
@@ -60,7 +63,8 @@ Anna Baker
     <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
     <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
   </UL>
-
+  </div>
+  <div class = "grow">
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
   <UL>
     <LI>Successfully organized community to initiate trash collection and recycling</LI>
@@ -68,7 +72,8 @@ Anna Baker
     <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
     <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
   </UL>
-
+  </div>
+  <div class = "grow">
 <H4>Field Manager, Fund for the Public Interest 2008</H4>
   <UL>
     <LI>Managed team of 10-12 field canvassers</LI>
@@ -76,14 +81,17 @@ Anna Baker
     <LI>Met or exceeded all daily fund raising quotas</LI>
     <LI>Coordinated and trained incoming employees in fundraising</LI>
   </UL>
-
+  </div>
+  <div class = "grow">
 <H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4> 
   <UL>
     <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
     <LI>Managed a class of 30 – 40 middle school students</LI>
     <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
-  
+  </div>
+      
+ 
  
 <P>Education</P>
 
