--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@ Anna Baker
     
 <P> Experience </P> 
 <div class = "grow">
+<div class="hover-fold">
+<h2> Bilingual CA & Navigator </h2>
+  <div class="top">
+    <div class="front face"></div>
+    <div class="back face">
+      <p>II provided access to Obamacare to everyone who didn't understand. Come one, come all. </p>
+    </div>
+  </div>
+  
+  <div class="bottom"></div>
+  
+</div>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
