--- a/index.html
+++ b/index.html
@@ -35,18 +35,6 @@ Anna Baker
     
 <P> Experience </P> 
 <div class = "grow">
-<div class="hover-fold">
-<h2> Bilingual CA & Navigator </h2>
-  <div class="top">
-    <div class="front face"></div>
-    <div class="back face">
-      <p>II provided access to Obamacare to everyone who didn't understand. Come one, come all. </p>
-    </div>
-  </div>
-  
-  <div class="bottom"></div>
-  
-</div>
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
@@ -66,14 +54,14 @@ Anna Baker
   </UL>
  </div>
  <div class = "grow">
-<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4>
+<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4> </div>
 <UL>
-    <LI>Supported and coordinated Rural Community Development program</LI>
-    <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
-    <LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
-    <LI>Advised volunteers on environmentally focused projects</LI>
-    <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
-    <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
+    <div class = "grow"><LI>Supported and coordinated Rural Community Development program</LI></div>
+    <div class = "grow"><LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI></div>
+    <div class = "grow"><LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI></div>
+    <div class = "grow"><LI>Advised volunteers on environmentally focused projects</LI></div>
+    <div class = "grow"><LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI></div>
+   <div class = "grow"><LI>Participated as team member to develop and implement multiple workshops on program design and management</LI></div>
   </UL>
   </div>
   <div class = "grow">
