--- a/index.html
+++ b/index.html
@@ -63,42 +63,41 @@ Anna Baker
     <div class = "grow"><LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI></div>
    <div class = "grow"><LI>Participated as team member to develop and implement multiple workshops on program design and management</LI></div>
   </UL>
-  </div>
-  <div class = "grow">
+<div class = "grow">
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
   <UL>
-    <LI>Successfully organized community to initiate trash collection and recycling</LI>
-    <LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
-    <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
-    <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
+    <div class = "grow"><LI>Successfully organized community to initiate trash collection and recycling</LI>
+    <div class = "grow"><LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
+    <div class = "grow"><LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
+    <div class = "grow"><LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
   </UL>
   </div>
   <div class = "grow">
 <H4>Field Manager, Fund for the Public Interest 2008</H4>
   <UL>
-    <LI>Managed team of 10-12 field canvassers</LI>
-    <LI>Informed, advocated and raised funds for environmental initiatives</LI>
-    <LI>Met or exceeded all daily fund raising quotas</LI>
-    <LI>Coordinated and trained incoming employees in fundraising</LI>
+    <div class = "grow"><LI>Managed team of 10-12 field canvassers</LI>
+    <div class = "grow"><LI>Informed, advocated and raised funds for environmental initiatives</LI>
+    <div class = "grow"><LI>Met or exceeded all daily fund raising quotas</LI>
+    <div class = "grow"><LI>Coordinated and trained incoming employees in fundraising</LI></div>
   </UL>
-  </div>
+ 
   <div class = "grow">
 <H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4> 
   <UL>
-    <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
-    <LI>Managed a class of 30 – 40 middle school students</LI>
-    <LI>Engaged students by utilizing experiential learning techniques</LI>
+    <div class = "grow"><LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
+    <div class = "grow"><LI>Managed a class of 30 – 40 middle school students</LI>
+    <div class = "grow"><LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
   </div>
       
 <P>Education</P>
 
-<H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<H4> Concentrations: Community Development and Social Action </H4>
-<P4> Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
-<P4> Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
-<P4> Intercultural Communication, Leadership and Coalition Building </P4>
-<nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> 
+<div class = "grow"><H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
+<div class = "grow"><H4> Concentrations: Community Development and Social Action </H4>
+<div class = "grow"><P4> Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
+<div class = "grow"><P4> Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
+<div class = "grow"><P4> Intercultural Communication, Leadership and Coalition Building </P4>
+<div class = "grow"><nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> 
 <H4> 2008 B.A. International Relations, Augsburg College, Minneapolis MN </H4>
 <P4> Minors: Peace & Global Studies, Spanish </P4>
 
