--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ Anna Baker
 <header>
 <section>
 <H1> Anna Katherine Rodenborg Baker, MA  </H1>
-<H2> annakatherinebaker@gmail.com </H2>
-<H2> 763.302.9886 </H2>
+<H2> annakatherinebaker@gmail.com  763.302.9886    Minneapolis, MN </H2>
+
 </header>
 
 <P> Career Profile: </P>
