--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Anna Baker
 <section>
 <img src = "https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/13151683_853745066608_9151236486893344692_n.jpg?oh=a1ba6348eb30c877e162b95f65ed5ccb&oe=57D37620" alt = "Anna Baker photo" width="210" height="225"> 
 <H1> Anna Katherine Rodenborg Baker, MA  </H1>
-<H2> annakatherinebaker@gmail.com  763.302.9886    Minneapolis, MN </H2>
+<H2> annakatherinebaker@gmail.com               763.302.9886                Minneapolis, MN </H2>
 
 </header>
 
@@ -35,7 +35,7 @@ Anna Baker
 <main>
     
 <P> Experience </P> 
-<div class = "grow">
+
 <h4>Bilingual CA/MNsure Navigator, Planned Parenthood 2014-2016 </h4>
       <UL>
     <LI>Coordinated MNsure enrollment at Minneapolis clinic</LI>
@@ -44,8 +44,7 @@ Anna Baker
     <LI>Assisted in education and enrollment of clients</LI>
     <LI>Provided administrative services in clinic</LI>
   </UL>
-  </div>
-  <div class = "grow">
+ 
  <H4>Interpreter, Multilingual Word 2014</H4>
   
     <UL>
@@ -53,52 +52,49 @@ Anna Baker
     <LI>Assisted in communicating about cultural differences</LI>
     <LI>Coordinated interpreters with client requests</LI>
   </UL>
- </div>
- <div class = "grow">
+ 
 <H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4> </div>
 <UL>
-    <div class = "grow"><LI>Supported and coordinated Rural Community Development program</LI></div>
-    <div class = "grow"><LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI></div>
-    <div class = "grow"><LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI></div>
-    <div class = "grow"><LI>Advised volunteers on environmentally focused projects</LI></div>
-    <div class = "grow"><LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI></div>
-   <div class = "grow"><LI>Participated as team member to develop and implement multiple workshops on program design and management</LI></div>
+    <LI>Supported and coordinated Rural Community Development program</LI>
+    <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
+    <LI>Authored electronic weekly newsletter for volunteers and staff across Costa Rica</LI>
+    <LI>Advised volunteers on environmentally focused projects</LI>
+    <LI>Developed and led training for Peace Corps Costa Rica Diversity Committee</LI>
+   <LI>Participated as team member to develop and implement multiple workshops on program design and management</LI>
   </UL>
-<div class = "grow">
+
 <H4>Rural Community Development Specialist, US Peace Corps 2010-2012</H4>
   <UL>
-    <div class = "grow"><LI>Successfully organized community to initiate trash collection and recycling</LI>
-    <div class = "grow"><LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
-    <div class = "grow"><LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
-    <div class = "grow"><LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
+    <LI>Successfully organized community to initiate trash collection and recycling</LI>
+    <LI>Led campaign to certify Rio Celeste in Costa Rica’s national eco-certification program, Bandera Azul</LI>
+    <LI>Secured grant funding, developed and managed biogas digester project for local school and community households</LI>
+    <LI>Prepared and hosted Technical Training Week for Peace Corps trainees</LI>
   </UL>
-  </div>
-  <div class = "grow">
+  
 <H4>Field Manager, Fund for the Public Interest 2008</H4>
   <UL>
-    <div class = "grow"><LI>Managed team of 10-12 field canvassers</LI>
-    <div class = "grow"><LI>Informed, advocated and raised funds for environmental initiatives</LI>
-    <div class = "grow"><LI>Met or exceeded all daily fund raising quotas</LI>
-    <div class = "grow"><LI>Coordinated and trained incoming employees in fundraising</LI></div>
+    <LI>Managed team of 10-12 field canvassers</LI>
+    <LI>Informed, advocated and raised funds for environmental initiatives</LI>
+    <LI>Met or exceeded all daily fund raising quotas</LI>
+    <LI>Coordinated and trained incoming employees in fundraising</LI>
   </UL>
  
-  <div class = "grow">
+ 
 <H4>English as a Second Language (ESL) Teacher, World Teach China, Summer 2007</H4> 
   <UL>
-    <div class = "grow"><LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
-    <div class = "grow"><LI>Managed a class of 30 – 40 middle school students</LI>
-    <div class = "grow"><LI>Engaged students by utilizing experiential learning techniques</LI>
+    <LI>Developed curriculum, designed lesson plans and taught English to youth in Hunan Province, China</LI>
+    <LI>Managed a class of 30 – 40 middle school students</LI>
+    <LI>Engaged students by utilizing experiential learning techniques</LI>
   </UL>
-  </div>
-      
+  
 <P>Education</P>
 
-<div class = "grow"><H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
-<div class = "grow"><H4> Concentrations: Community Development and Social Action </H4>
-<div class = "grow"><P4> Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
-<div class = "grow"><P4> Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
-<div class = "grow"><P4> Intercultural Communication, Leadership and Coalition Building </P4>
-<div class = "grow"><nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> 
+<H4>2012 M.A. Sustainable Development, School for International Training, Brattleboro, VT</H4>
+<H4> Concentrations: Community Development and Social Action </H4>
+<P4> Courses: Policy Advocacy, Theory and Practice of Sustainable Development, </P4>
+<P4> Economics, Training and Design for Experiential Learning, Training for Social Action,</P4> 
+<P4> Intercultural Communication, Leadership and Coalition Building </P4>
+<nav> Capstone Project: <a href = "http://digitalcollections.sit.edu/cgi/viewcontent.cgi?article=3598&context=capstones">"Changing the Status Quo of Waste Management: A Case Study of a Rural Costa Rican Town</a></nav> 
 <H4> 2008 B.A. International Relations, Augsburg College, Minneapolis MN </H4>
 <P4> Minors: Peace & Global Studies, Spanish </P4>
 
