--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Anna Baker
     <LI>Coordinated interpreters with client requests</LI>
   </UL>
  
-<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4> </div>
+<H4>Peace Corps Volunteer Leader, US Peace Corps 2013 </H4> 
 <UL>
     <LI>Supported and coordinated Rural Community Development program</LI>
     <LI>Reviewed and edited Peace Corps volunteers’ grant proposals</LI>
