--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Anna Baker
 <img src = "https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/13151683_853745066608_9151236486893344692_n.jpg?oh=a1ba6348eb30c877e162b95f65ed5ccb&oe=57D37620" alt = "Anna Baker photo" width="210" height="225"> 
 <H1> Anna Katherine Rodenborg Baker, MA  </H1>
 <H2> Mover and shaker, world traveler, renegade extraordinaire. Your next employee. </H2>
-<H3>annakatherinebaker@gmail.com &nbsp;&nbsp;&nbsp;&nbsp 763.302.9886</H3>
+<H3>annakatherinebaker@gmail.com &nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp 763.302.9886</H3>
 </header>
 
 <main>
