--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ $(document).ready(function(){
 Anna Baker
 </TITLE>
 </HEAD>
-<BODY> 
+<BODY> <a href="#" class="myButton">Hello</a>
 <button id="hide">Hide</button>
 <button id="show">Show</button>
 <div class = "hideme"> <!--DONT TOUCH ME OR ILL RUN AWAY-->
