--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ Anna Baker
 </HEAD>
 <BODY> <a href="#" class="myButton">Hello</a>
 <button id="hide">Hide</button>
-<button id="show">Show</button>
+<div class="myButton">
+<button id="show">Hello</button>
+</div>
 <div class = "hideme"> <!--DONT TOUCH ME OR ILL RUN AWAY-->
 
 <header>
