--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ $(document).ready(function(){
 Anna Baker
 </TITLE>
 </HEAD>
-<BODY> <a href="#" class="myButton">Hello</a>
+<BODY> 
 <button id="hide">Hide</button>
 <div class="myButton">
 <button id="show">Hello</button>
